# GSOF_3dWireFrame

./: .gitignore  LICENSE  README.md  pyproject.toml
GSOF_3dWireFrame/: Drone_Class.py  Example_Drone.py  Example_F16.py  Example_dynamicWorld.py  Example_motionWorld.py  Example_staticWorld.py  F16_Class.py
GSOF_3dWireFrame/Lib3D/: WireFrame_display.py
GSOF_3dWireFrame/objects/Drone/: Blade.stl  Body.stl
